# Problem-solving

./: .gitignore  11364-Parking.cpp  11498 Division of nlogonia.cpp  11727-cost cutting.cpp  12250 Language detection.cpp  12279 Emoogle's balance.cpp  12289 one two three.cpp  12372 packing for holiday.cpp  12403 save setu.cpp  12577 Hajj.cpp  272.cpp  README.md
CPP/C plus plus/: 11498 Division of Nlogonia.cpp  17-5.cpp  18-1.cpp  18-2.cpp  18-3.cpp  19.cpp  Array String in cpp diff way.cpp  Bitwise operator.cpp  Bubble Binary search.cpp  CMakeLists.txt  EOF in input.cpp  Leap year.cpp  Palindrome for number.cpp  Prime right.cpp  Rikshaw.cpp  STRING.cpp  STack function.cpp  String insert.cpp  Untitled1.cpp  ajaira.c  ajaira.cpp  ajaira1.cpp  cal.cpp  code marshal star.cpp  cpp headerfile.cpp  diamond.cpp  fuk.cpp  input.txt  jjjj.cpp  main.cpp  namta.cpp  prime fron n to n.cpp  prime.cpp  programming word print.cpp  pyramid 0 1.cpp  pyramid.cpp  pyramidd.cpp  recurse.cpp  short string palindrome.cpp  sieve method prime to N.cpp  (+3 more)
CPP/C plus plus/Important/: Armostrong number.cpp  Fib recusion.cpp  Insertion sort.cpp  LCS.cpp  OR XOR.cpp  Reverse integer number.cpp  ajaira.cpp  check sorted or not.cpp  factorial recursion.cpp  fibonacci.cpp  integer reverse recursion.cpp
CPP/C plus plus/LAB/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  BFS.cpp  Enque.cpp  Floyd-Warshall.cpp  ajaira.c  ajaira.cpp  matrix 31-7-16.cpp  matrix adding.cpp
CPP/C plus plus/Noboborsho 1423/: A.cpp  H.cpp  J.cpp
CPP/C plus plus/Pyramid/: ajaira.cpp
CPP/C plus plus/Vector/: push_back.cpp  (+1 more)
(+679 files in other folders)
